fixed reset button width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@
 	bottom: 10px;
 	left: 15px;
 	min-width: 0px;
+    width: 80px;
 	height: 40px;
 	line-height: 40px;
     color:white;
